--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not a scam</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Not a scam</title>
+    </head>
+    <body>
+        <h1>Definitely not a scam</h1>
+        <form action="" method="get">
+            <label for="credit-card">Credit card pls</label>
+            <input type="text" id="credit-card" name="credit-card" />
+            <input type="submit" value="Send pls" />
+        </form>
+    </body>
 </html>
