--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <body>
         <h1>Definitely not a scam</h1>
         <form action="" method="get">
-            <label for="credit-card">Credit card pls</label>
-            <input type="text" id="credit-card" name="credit-card" />
+            <label for="credit-card-nr">Credit card number</label>
+            <input type="text" id="credit-card-nr" name="credit-card-nr" />
+            <label for="exp-date">Expiration date</label>
+            <input type="date" id="exp-date" name="exp-date" />
+            <label for="cvv">CVV</label>
+            <input type="number" id="cvv" name="cvv" />
             <input type="submit" value="Send pls" />
         </form>
+        <div id="output"></div>
+        <script src="index.js"></script>
     </body>
 </html>
