--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
         <title>Not a scam</title>
     </head>
     <body>
+        <div class="lockscreen">
+            <input type="number" name="code" id="code" />
+        </div>
         <h1>Definitely not a scam</h1>
         <form action="" method="get">
             <label for="credit-card-nr">Credit card number</label>
