--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <label for="credit-card-nr">Credit card number</label>
             <input type="text" id="credit-card-nr" name="credit-card-nr" />
             <label for="exp-date">Expiration date</label>
-            <input type="date" id="exp-date" name="exp-date" />
+            <input type="text" id="exp-date" name="exp-date" placeholder="MM/YY" required pattern="((0|1)\d){1}\/2\d{1}"/>
             <label for="cvv">CVV</label>
-            <input type="number" id="cvv" name="cvv" />
+            <input type="text" id="cvv" name="cvv" placeholder="eg. 321" required pattern="\d{3}"/>
             <input type="submit" value="Send pls" />
         </form>
         <div id="output"></div>
