--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="form-window">
-            <h1>Definitely not a scam</h1>
+            <h1 class="glitch" data-text="Definitely not a scam" >Definitely not a scam</h1>
             <form action="" class="input-form" method="get">
                 <label class="form-label" for="credit-card-nr">Credit card number</label>
                 <input type="text" id="credit-card-nr" name="credit-card-nr" placeholder="1234 4321 1234 4321" />
@@ -23,7 +23,7 @@
             </form>
             <div id="output"></div>
         </div>
-        <div class="lockscreen hidden">
+        <div class="lockscreen">
             <input type="number" name="code" id="code" />
         </div>
         <script src="index.js"></script>
